# ModernOpenGL

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: main.cpp
src/core/: inputManager.cpp  inputManager.h  resourceManager.cpp  resourceManager.h  timeManager.cpp  timeManager.h  window.cpp  window.h
src/gui/: imGuiLayer.cpp  imGuiLayer.h
src/input/: inputManager.cpp  inputManager.h
src/meshes/: cubeData.h
src/rendering/: light.cpp  light.h  lightObject.cpp  lightObject.h  material.cpp  material.h  mesh.cpp  mesh.h  object.cpp  object.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  textureUtils.cpp  textureUtils.h
src/rendering/meshes/: cubeData.h  cubeNormal.h  cubeSimple.h  planeData.h  pyramidData.h
src/rendering/shaders/: fragmentShader.frag  potentiometerShader.frag
src/rendering/shaders/lighting/: phong.frag  phong.vert
src/rendering/shaders/shaderToy/: default.frag  default.vert  rayMarching.frag  rayMarching.vert
src/scene/: camera.cpp  camera.h  gameObject.cpp  gameObject.h  scene.cpp  scene.h
src/shaders/: fragmentShader.frag  vertexShader.vert
src/utils/: arduinoController.cpp  arduinoController.h  arudinoController.cpp  cameraUtils.cpp  cameraUtils.h  fileUtils.cpp  fileUtils.h  inputUtils.cpp  inputUtils.h  profilingUtils.cpp  profilingUtils.h  textureUtils.cpp  textureUtils.h
src/utils/arduino/: arduinoController.h
src/utils/arduino/blinkInput/: blinkInput.ino
src/utils/arduino/potentiometerInput/: potentiometerInput.ino
